--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!--
+      Note: %PUBLIC_URL% is replaced during build with the URL of the "public"
+      folder. This has several advantages over prefixing URLs with "/", most
+      notably using %PUBLIC_URL% is more robust when the app has a non-root
+      public URL.
+    -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -11,6 +17,8 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
 
+    <!-- manifest.json provides metadata used when the web app is installed on a
+         user's devece as a PWA. See https://developers.google.com/web/fundamentals/web-app-manifest/ -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
