--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TUTV is a student-run production studio that strives to foster 
+    a supportive and collaborative community where anyone can learn about the 
+    filmmaking process and develop their own artistic voice."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -28,7 +30,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>TUTV Equipment Borrowing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
